NTBS-583 fix button issues and label alignment, also 2nd create notification button only shows if over 3 results are displayed

--- a/ntbs-service/wwwroot/css/search.scss
+++ b/ntbs-service/wwwroot/css/search.scss
@@ -59,6 +59,7 @@
 }
 
 .search-label--long {
+    margin: auto 0;
     width: 180px;
 }
 
